@@ -88,7 +88,7 @@ q^101)
 [0, 0, -1, -1, 0, 0, -2, 1, -1, 48, -216, 37, 110592/37, Vecsmall([1]), [Vec
 small([128, 1])], [0, 0, 0, 0, 0, 0, 0, 0]]
 ? l=elllseries(ccurve,2)
-0.38157540826071121129371040958008663665
+0.38157540826071121129371040958008663668
 ? abs(elllseries(ccurve,2,1.2)-l)<1.4e-38
 1
 ? tcurve=ellinit([1,0,1,-19,26]);
@@ -121,4 +121,4 @@ small([128, 1])], [0, 0, 0, 0, 0, 0, 0, 0]]
  28*w))]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 24
+Total time spent: 23
