@@ -9,9 +9,9 @@
 1 + 128*I,       -1/10*I: 8.6 e-37
 1 + 128*I, 1/10 - 1/10*I: 2.1 e-37
         0,          -100: 8.4 e-95
-      1/2,          -100: 3.4 e-43
+      1/2,          -100: 2.6 e-43
    10 - I,    19 + 236*I: 9.0 e-95
-   10 - I,          -100: 9.2 e-56
+   10 - I,          -100: 3.4 e-56
 1 + 128*I,       -1/10*I: 6.2 e-95
 1 + 128*I, 1/10 - 1/10*I: 1.6 e-94
 1: -37
@@ -74,4 +74,4 @@
   ***   at top-level: eint1(0)
   ***                 ^--------
   *** eint1: domain error in eint1: x = 0
-Total time spent: 112
+Total time spent: 72
