@@ -429,10 +429,10 @@ x^17 - 1
 ? hyperu(1,1,1)
 0.59634736232319407434107849936927937607
 ? incgam(2,1)
-0.73575888234288464319104754032292173491
+0.73575888234288464319104754032292173489
 ? zeta(0.5+14.1347251*I)
 5.2043097453468479398562848599360610966 E-9 - 3.2690639869786982176409251733
 763732423 E-8*I
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 44
+Total time spent: 17
