@@ -1,4 +1,4 @@
-HEAP=[183, if(precision(1.)==38, 5763, 8929)];
+HEAP=[183, if(precision(1.)==38, 5762, 8929)];
 \\ A tres grande precision
 \p 2000
 \e
